logging added
