# src/main/java/com/minibank/controllers/rest/UserControllerRest.java
@@ -1,0 +1,27 @@
+package com.minibank.controllers.rest;
+
+import com.minibank.vo.AccountVO;
+import com.minibank.vo.InlineObject3;
+import com.minibank.vo.TransactionVO;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
+
+@RestController
+public class UserControllerRest implements UserApi{
+    @Override
+    public ResponseEntity<TransactionVO> createTransaction(Long accountId, InlineObject3 inlineObject3) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<List<AccountVO>> getMyAccountList(Long userId, Integer page, Integer perPage) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<List<TransactionVO>> getMyTransactionList(Long accountId, Integer page, Integer perPage) {
+        return null;
+    }
+}
